# scheduler-project

./: .gitignore  AGENTS.md  README.md  codex_pg.sln  demo.py  requirements.txt  run_db_schedule.py
AutoPC排程/: .gitignore  CHANGELOG.md  README.md  TABLE資料表.xlsx  TODO.md
AutoPcScheduler/: AutoPcScheduler.csproj
DELPHI/: .gitignore  CHANGELOG.md  PUR2019P_PARITY_MATRIX.md  Pur2019Migration.sln  README.md  TODO.md
DrawingTagVs2022_UI完整版/: .gitignore  CHANGELOG.md  DrawingTagVs2022.sln  DrawingTagVs2022_UI完整版_Fixed.rar  README.md  README.txt  TODO.md  _tmp_tesseract_probe.cs  run_web.bat
HmailEventHandlers/: CHANGELOG.md  EventHandlers.vbs  EventHandlers_修改記錄.md  README.md  TODO.md
LocalBusinessLandingPage/: CHANGELOG.md  Program.cs  README.md  TODO.md
RAG/: CHANGELOG.md  README.md  RagServer.sln  TODO.md  docker-compose.yml
SchedulerConfigProvider/: SchedulerConfig.cs
SchedulerDragDrop/: ACCEPTANCE_TEST_CHECKLIST.md  App.xaml  App.xaml.cs  CHANGELOG.md  DatabaseScheduleLoader.cs  MainWindow.xaml  MainWindow.xaml.cs  Models.cs  ProcessGroupSelectionDialog.xaml  ProcessGroupSelectionDialog.xaml.cs  README.md  SchedulerDragDrop.csproj  SchedulerEngine.cs  TODO.md  (+3 more)
pdf-circle-locator/: .gitignore  CHANGELOG.md  README.md  TODO.md  pyproject.toml  requirements.txt  run_pdf_circle_locator.bat  run_pdf_circle_locator_fast.bat
pdf-circle-locator/circle_locator/: __init__.py  cli.py  detector.py
pdf-circle-locator/tests/: test_detector.py
pdf-circle-locator/tools/: generate_number_template_library.py  generate_sample_pdf.py  generate_sample_templates.py
(+582 files in other folders)
